--- a/NamespaceDemo/index.html
+++ b/NamespaceDemo/index.html
@@ -5,5 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<!--<script src='utility-functions.js'></script>
+<script src='app.js'></script>-->
+<script src='bundle.js'></script>
 </body>
 </html>
